--- a/sources/rss/Chart.yaml
+++ b/sources/rss/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
-name: im-inside
-description: A Helm chart for Kubernetes
-
+name: data-source-rss
+description: A Helm chart for Kubernetes.
+icon: https://rss.com/wp-content/uploads/2018/09/social_style_3_rss-512-1.png
 # A chart can be either an 'application' or a 'library' chart.
 #
 # Application charts are a collection of templates that can be packaged into versioned archives
@@ -12,10 +12,14 @@ description: A Helm chart for Kubernetes
 # pipeline. Library charts do not define any templates and therefore cannot be deployed.
 type: application
 
+keywords:
+  - data-source
+  - rss
+
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 version: 0.1.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application.
-appVersion: 1.16.0
+appVersion: latest
