--- a/sources/rss/values.yaml
+++ b/sources/rss/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: nginx
+  repository: "127.0.0.1:34309/data-source-rss"
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
@@ -64,3 +64,47 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+#applicationConfig: "test"
+
+applicationConfig:
+  spring:
+    autoconfigure:
+      exclude: org.springframework.boot.autoconfigure.amqp.RabbitAutoConfiguration
+    cloud:
+      stream:
+        bindings:
+          input:
+            destination: input
+            group: input-group
+            binder: rabbit
+          output:
+            destination: output
+        rabbit:
+          bindings:
+            input:
+              consumer:
+                bindingRoutingKey: "rss"
+            output:
+              producer:
+                bindingRoutingKey: "json.rss"
+                routing-key-expression: '"json.rss"'
+        binders:
+          rabbit:
+            type: rabbit
+            environment:
+              spring:
+                rabbitmq:
+                  host: localhost
+                  port: 5672
+                  username: admin
+                  password: admin
+                  virtual-host: /
+    redis:
+      host: localhost
+      port: 6379
+  logging:
+    level:
+      fr:
+        asso:
+          placeholder: DEBUG
